--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -12,12 +12,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: list
-        run: ls -l -a
+        run: pwd
       - name: Install python
         uses: actions/setup-python@v4
         with:
           python-version: "3.12"
       - name: Install ruff
-        run: sudo apt install -y ruff
+        run: pip install ruff
       - name: Run ruff
         run: ruff check .
