--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     branches: [ '*' ]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   linter:
     name: Ruff linter
@@ -11,8 +16,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: list
-        run: pwd
       - name: Install python
         uses: actions/setup-python@v4
         with:
@@ -21,3 +24,44 @@ jobs:
         run: pip install ruff
       - name: Run ruff
         run: ruff check .
+  test:
+    name: Run tests
+    runs-on: ubuntu-latest
+    needs: linter
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run tests
+        run: pytest
+      - name: Upload tests report
+        uses: actions/upload-artifact@v3
+        with:
+          name: allure-results
+          path: allure-results
+  report:
+    name: Generate allure report
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Download test results
+        uses: actions/download@artifact@v3
+        with:
+          name: allure-results
+          path: allure-results
+      - name: Generate allure report
+        run: allure generate -c allure-results -o allure-report --clean
+      - name: Upload allure to Pages
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: allure-report
+      - name: Deploy allure report
+        id: deployment
+        uses: actions/deploy-pages@v1.2.9
