--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -52,7 +52,7 @@ jobs:
     needs: test
     steps:
       - name: Download test results
-        uses: actions/download@artifact@v3
+        uses: actions/download-artifact@v3
         with:
           name: allure-results
           path: allure-results
