--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -50,6 +50,7 @@ jobs:
     name: Generate allure report
     runs-on: ubuntu-latest
     needs: test
+    if: always()
     steps:
       - name: Download test results
         uses: actions/download-artifact@v3
