--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Run tests
         run: pytest
       - name: Upload tests report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: allure-results
