--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -53,6 +53,14 @@ jobs:
     needs: test
     if: always()
     steps:
+      - name: Install allure
+        run: |
+          sudo apt update
+          sudo apt install -y openjdk-11-jdk
+          curl -o allure.tgz -L https://github.com/allure-framework/allure2/releases/download/2.18.1/allure-2.18.1.tgz
+          tar -zxvf allure.tgz
+          sudo mv allure-2.18.1 /opt/allure
+          sudo ln -s /opt/allure/bin/allure /usr/local/bin/allure
       - name: Download test results
         uses: actions/download-artifact@v4
         with:
