--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -71,3 +71,5 @@ jobs:
       - name: Deploy allure report
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          artifact_name: allure-report
