--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -68,6 +68,11 @@ jobs:
           path: allure-results
       - name: Generate allure report
         run: allure generate -c allure-results -o allure-report --clean
+      - name: Upload allure report as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-report
+          path: allure-report
       - name: Deploy allure report
         id: deployment
         uses: actions/deploy-pages@v4
