--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -69,8 +69,9 @@ jobs:
       - name: Generate allure report
         run: allure generate -c allure-results -o allure-report --clean
       - name: Upload allure report as artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
+          name: allure-report
           path: allure-report
       - name: Deploy allure report
         uses: actions/deploy-pages@v4
