--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Generate allure report
         run: allure generate -c allure-results -o allure-report --clean
       - name: Upload allure report as artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
           name: allure-report
           path: allure-report
