--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -39,6 +39,19 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Write secrets to .env file
+        run: |
+          touch .env
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
+          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+          echo "POSTGRES_DB_AUTH=auth" >> .env
+          echo "POSTGRES_DB_UNIVERSITY=university" >> .env
+          echo "AUTH_SERVICE_INTERNAL_URL=http://auth:8000" >> .env
+          echo "AUTH_SERVICE_API_URL=http://127.0.0.1:8000" >> .env
+          echo "UNIVERSITY_SERVICE_INTERNAL_URL=http://university:8000" >> .env
+          echo "UNIVERSITY_SERVICE_API_URL=http://127.0.0.1:8001" >> .env
+      - name: Start product
+        run: docker compose up -d
       - name: Run tests
         run: pytest
       - name: Upload tests report
