--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -51,7 +51,7 @@ jobs:
           echo "UNIVERSITY_SERVICE_INTERNAL_URL=http://university:8000" >> .env
           echo "UNIVERSITY_SERVICE_API_URL=http://127.0.0.1:8001" >> .env
       - name: test test
-        run:  cat .env
+        run:  curl http://127.0.0.1:8000
       - name: Start product
         run: docker compose up -d
       - name: Run tests
