--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -52,6 +52,8 @@ jobs:
           echo "UNIVERSITY_SERVICE_API_URL=http://127.0.0.1:8001" >> .env
       - name: Start product
         run: docker compose up -d
+      - name: test test
+        run: docker inspect --format='{{json .State.Health}}' $(docker ps -q -f name=university)
       - name: Run tests
         run: pytest
       - name: Upload tests report
