--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Start product
         run: docker compose up -d
       - name: test test
-        run: docker inspect --format='{{json .State.Health}}' $(docker ps -q -f name=university)
+        run: docker ps -q | xargs -I {} docker inspect --format='{{.Name}} {{json .State.Health}}' {}
       - name: Run tests
         run: pytest
       - name: Upload tests report
