--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -51,9 +51,9 @@ jobs:
           echo "UNIVERSITY_SERVICE_INTERNAL_URL=http://university:8000" >> .env
           echo "UNIVERSITY_SERVICE_API_URL=http://127.0.0.1:8001" >> .env
       - name: Start product
-        run: docker compose up -d --wait healthy
-      - name: test test
-        run: docker ps -q | xargs -I {} docker inspect --format='{{.Name}} {{json .State.Health}}' {}
+        run: docker compose up -d
+      - name: Wait
+        run: sleep 10
       - name: Run tests
         run: pytest
       - name: Upload tests report
