--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -54,8 +54,10 @@ jobs:
         run: docker compose up -d
       - name: Wait
         run: sleep 10
-      - name: Run tests
-        run: pytest
+      - name: Build docker test container
+        run: docker build -t testing:latest .
+      - name: Run testing container
+        run: docker run --network host testing:latest
       - name: Upload tests report
         if: always()
         uses: actions/upload-artifact@v4
