--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Build docker test container
         run: docker build -t testing:latest .
       - name: Run testing container
-        run: docker run --network host -v ./allure-results:./allure-results testing:latest
+        run: docker run --network host -v ./allure-results:/app/allure-results testing:latest
       - name: Upload tests report
         if: always()
         uses: actions/upload-artifact@v4
